--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-code for Yiyi's experiments of JHUIR system
+DryRun Corpus: /export/fs04/a12/mahsay/BETTER/data/raw/English-IR-data
+DryRun taskfile: /export/fs04/a12/mahsay/BETTER/data/IR_dry_run_outputs/dry-run-assessments/dry-run-topics.final.json
