--- a/readme
+++ b/readme
@@ -1,2 +1,10 @@
 DryRun Corpus: /export/fs04/a12/mahsay/BETTER/data/raw/English-IR-data
 DryRun taskfile: /export/fs04/a12/mahsay/BETTER/data/IR_dry_run_outputs/dry-run-assessments/dry-run-topics.final.json
+
+pipeline:
+script_English_preprocessor.py -->/src/main/java/EnglishIndexerBETTER/BETTERIRIndexer.java --> /src/main/java/EnglishQueryFormulator/EngQueryGen.java
+-->src/main/java/ArabicSearcher/MainArabicSearcher.java
+
+output:
+/scratch/English.dryrun.output.txt 
+/scratch/English.dryrun.outputToIE.json
